# udp_messaging

./: .gitignore  CMakeLists.txt  README.md
include/: utils.h
include/UDPPacket/: UDPPacket.h
include/concurrency/: ThreadPool.h
include/entities/: Client.h  Entity.h  Server.h
include/receiver/: FileReceiver.h  MainReceiver.h  Receiver.h  TextReceiver.h
include/sender/: FileSender.h  Sender.h  SenderFactory.h  TextSender.h
include/streamDownload/: StreamDownload.h  VidStreamDownload.h
include/streamUpload/: StreamUpload.h  VidStreamUpload.h
include/streaming/: VideoPlayer.h
include/vidStream/: VidStream.h
src/: CMakeLists.txt  main.cpp  utils.cpp
src/UDPPacket/: UDPPacket.cpp
src/concurrency/: ThreadPool.cpp
src/entities/: Client.cpp  Entity.cpp  Server.cpp
src/receiver/: FileReceiver.cpp  MainReceiver.cpp  TextReceiver.cpp
src/sender/: FileSender.cpp  SenderFactory.cpp  TextSender.cpp
src/streamDownload/: VidStreamDownload.cpp
src/streamUpload/: VidStreamUpload.cpp
src/streaming/: VideoPlayer.cpp
storage/: 20230529_105737.txt  README.md
